--- a/playground/nuxt/assets/css/main.css
+++ b/playground/nuxt/assets/css/main.css
@@ -622,7 +622,7 @@ body {
 }
 
 .cssSlideTransition-enter-from {
-	transform: translateX(30%);
+	transform: translateX(20%);
 	opacity: 0;
 }
 
